[package]
name = "exercise-1"
version = "0.1.1"
edition = "2021"
build= "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = {version = "0.9.0", features = ["introspection"]}
clap = {version = "4.1.4", features = ["derive"] }