[package]
name = "afl-fuzz-clone"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = {path="../../LibAFL/libafl", features = []} # "introspection"
clap = {version = "4.1.4", features = ["derive"] }