[package]
name = "storfuzz-fuzzbench"
version = "0.1.1"
edition = "2021"

[features]
variable-data-map-size = []
# Enables output to nicely formatted tui monitor (has some unsolved issues that lead to hangs)
tui = ["libafl/tui_monitor"]
# Enables introspection in libafl (most useful in conjunction with tui)
introspection = ["libafl/introspection"]
# Disables storing the queue to disk
keep-queue-in-memory = []
# Only evaluate data coverage
data-cov-only = []
# Only evaluate edge coverage
edge-cov-only = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = {path="../../LibAFL/libafl", features = []}
libafl_bolts = {path="../../LibAFL/libafl_bolts"}
libafl_targets = {path="../../LibAFL/libafl_targets"}
clap = {version = "4.1.4", features = ["derive"] }
konst = {version = "0.3.5", features = ["parsing"]}

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true
