[package]
name = "storfuzz_cmin"
version = "0.1.0"
edition = "2021"

[features]
variable-data-map-size = []
# Enables introspection in libafl (most useful in conjunction with tui)
introspection = ["libafl/introspection"]
# Only evaluate data coverage
data-cov-only = []
# Only evaluate edge coverage
edge-cov-only = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libafl = {path="../../libafl", features = ["cmin"]}
libafl_bolts = {path="../../libafl_bolts"}
clap = {version = "4.1.4", features = ["derive"] }
konst = {version = "0.3.5", features = ["parsing"]}
env_logger={version = "0.10.0"}
libafl_targets={path="../../libafl_targets"}