[package]
name = "storfuzz_fuzzbench_in_process"
version = "0.11.1"
authors = ["Andrea Fioraldi <andreafioraldi@gmail.com>", "Dominik Maier <domenukk@gmail.com>"]
edition = "2021"

[features]
default = ["std"]
std = []
no_link_main = ["libafl_targets/libfuzzer_no_link_main"]
safe_alloc = ["libafl/safe_alloc_for_inprocess"]
lossy_aggregation = ["libafl_targets/storfuzz_lossy_aggregation"]
storfuzz_introspection = ["libafl_targets/storfuzz_introspection"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[profile.release-fuzzbench]
inherits = "release"
debug = false
strip = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = "4.4"

[dependencies]
libafl = { path = "../../libafl" }
libafl_bolts = { path = "../../libafl_bolts" }
libafl_targets = { path = "../../libafl_targets", features = ["sancov_pcguard_hitcounts", "sancov_cmplog", "libfuzzer"] }
libafl_cc = { path = "../../libafl_cc" }
clap = { version = "4.0", features = ["derive"] }
mimalloc = { version = "*", default-features = false }
storfuzz_constants = {path = "../storfuzz_constants"}
env_logger = "*"
log = "*"
serde = { version = "1.0.192", features = ["derive"] }

[lib]
name = "storfuzz_fuzzbench_in_process"
crate-type = ["staticlib"]
