[package]
name = "storfuzz_libafl_cc"
version = "0.1.0"
authors = ["clesmian <clesmian@gmail.com>"]
edition = "2021"

[features]
default = ["std", "auto_init_forkserver"]
std = []
auto_init_forkserver = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = true

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
which = { version = "4.4" }

[dependencies]
clap = { version = "4.0", features = ["derive"] }
nix = "0.26"
libafl = { path = "../../libafl/" }
libafl_bolts = { path = "../../libafl_bolts/" }
libafl_cc = { path = "../../libafl_cc/" }
libafl_targets = { path = "../../libafl_targets/" }

[lib]
name = "libforkserver_storfuzz_cc"
crate-type = ["staticlib"]
